--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,8 +1,4 @@
-/*!
- * Bootstrap v5.0.0-beta1 (https://getbootstrap.com/)
- * Copyright 2011-2020 The Bootstrap Authors
- * Copyright 2011-2020 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+/*
  */
 :root {
   --bs-white: #fff;
