--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 /*------------------------------------------------------------------
 [Master Stylesheet]
 -------------------------------------------------------------------
-Theme Name:     Shade - Landing Page Template
-Theme URL:      https://05-temp-whiter.netlify.app/
-Author:         grayic
+Project Name:     Clint Tools
+Project URL:      https://clinttools.clintmadeit.tech/
+Author:         Clintmadeit
 Version:        1.0
-Last change:    25/04/2021
-Description:    A default stylesheet for Appex - Landing HTML5 Template.
+Last change:    04/06/2023
+Description:    Clint Tools DAW project landing page
 Primary use:    Business, responsive, bootstrap 5, html5, clean, modern, creative, landing page, app  landing etc.
-Support:        https://finestdevs.com/product-support/
+Support:        https://clintmadeit.tech/support/
 -------------------------------------------------------------------*/
 /*********** CSS TABLE OF CONTENTS *******************
 
@@ -21,7 +21,7 @@ Support:        https://finestdevs.com/product-support/
 
 
 
-|--- THEME CUSTOM STYLES
+|--- PROJECT CUSTOM STYLES
 
 |--- 01.sections -> { Landing-17 }
 
