--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,14 @@
 /*------------------------------------------------------------------
 [Master Stylesheet]
 -------------------------------------------------------------------
-Project Name:     Clint Tools
-Project URL:      https://clinttools.clintmadeit.tech/
-Author:         Clintmadeit
+Theme Name:     Shade - Landing Page Template
+Theme URL:      https://05-temp-whiter.netlify.app/
+Author:         grayic
 Version:        1.0
-Last change:    04/06/2023
-Description:    Clint Tools DAW project landing page
+Last change:    25/04/2021
+Description:    A default stylesheet for Appex - Landing HTML5 Template.
 Primary use:    Business, responsive, bootstrap 5, html5, clean, modern, creative, landing page, app  landing etc.
-Support:        https://clintmadeit.tech/support/
+Support:        https://finestdevs.com/product-support/
 -------------------------------------------------------------------*/
 /*********** CSS TABLE OF CONTENTS *******************
 
@@ -21,7 +21,7 @@ Support:        https://clintmadeit.tech/support/
 
 
 
-|--- PROJECT CUSTOM STYLES
+|--- THEME CUSTOM STYLES
 
 |--- 01.sections -> { Landing-17 }
 
@@ -29,8 +29,8 @@ Support:        https://clintmadeit.tech/support/
 ******************************************************/
 /*=== Media Query ===*/
 body[data-theme='dark'], .dark-bg, .dark-mode-texts {
-  --bg:                 #1E2291 ;
-  --bg-2:                 #1E2291 ;
+  --bg:                 #1e22918a;
+  --bg-2:                 #1e22918a;
   --color-headings:    $white;
   --color-texts:        rgba(255,255,255, 0.7);
   --color-texts-2:        rgba(255,255,255, 1);
